Add hero section

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talking Travel</title>
-    <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 
 <body>
@@ -32,6 +32,29 @@
             </div>
         </div>
     </nav>
+    <main class="hero_container">
+        <div class="hero_content_wrapper">
+            <div class="hero_content">
+                <div class="hero_texts">
+                    <span class="hero_title">
+                        <span class="hero_title" style="color: var(--secondary-text-color);">Let’s talk</span> about your
+                        next trip!
+                    </span>
+                    <div class="hero_description">Share your favorite travel destination and we will feature it in our next blog!</div>
+                </div>
+                <div class="hero_buttons">
+                    <div class="hero_main_button">Share your story</div>
+                    <div class="hero_play_button">
+                        <div class="hero_play_button_icon">
+                            <img src="src/img/play.svg" alt="">
+                        </div>
+                        <span>Watch highlights</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    
 </body>
 
 </html>
