--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Talking Travel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css">
 </head>
@@ -32,7 +33,7 @@
             </div>
         </div>
     </nav>
-    <main class="hero_container">
+    <section class="hero_container">
         <div class="hero_content_wrapper">
             <div class="hero_content">
                 <div class="hero_texts">
@@ -53,8 +54,74 @@
                 </div>
             </div>
         </div>
-    </main>
-    
+    </section>
+    <section class="featured_destination_container">
+        <div class="featured_destination_wrapper">
+            <div class="featured_img_container">
+                <img src="src/img/featured.png" alt="">
+            </div>
+            <div class="featured_content">
+                <div class="featured_texts">
+                    <span class="featured_category">FEATURED DESTINATION</span>
+                    <span class="featured_title">Our swiss adventure blog</span>
+                    <span class="featured_description">Visiting the swiss alps? Want to know the requirements on travelling to Switzerland during the pandemic? Our blog might help! </span>
+                </div>
+                <div class="featured_button">
+                    <div class="featured_play_button_icon">
+                        <img src="src/img/play.svg" alt="">
+                    </div>
+                    <span>Watch now</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="discover_container">
+        <div class="discover_wrapper">
+            <div class="discover_content">
+                <div class="discover_texts">
+                    <span class="discover_category">JOIN OUR ADVENTURES</span>
+                    <span class="discover_title">Discover the world with us</span>
+                </div>
+                <div class="discover_locations">
+                    <div class="locations_grid">
+                        <div class="location_card">
+                            <div class="location_card_img_container">
+                                <img src="src/img/Iceland card image.png" alt="">
+                            </div>
+                            <div class="location_card_title">Iceland</div>
+                            <div class="location_card_button">Discover</div>
+                        </div>
+                        <div class="location_card">
+                            <div class="location_card_img_container">
+                                <img src="src/img/Italy card image.png" alt="">
+                            </div>
+                            <div class="location_card_title">Italy</div>
+                            <div class="location_card_button">Discover</div>
+                        </div>
+                        <div class="location_card">
+                            <div class="location_card_img_container">
+                                <img src="src/img/Dubai card image.png" alt="">
+                            </div>
+                            <div class="location_card_title">Dubai</div>
+                            <div class="location_card_button">Discover</div>
+                        </div>
+                        <div class="location_card">
+                            <div class="location_card_img_container">
+                                <img src="src/img/Patagonia Card Image.png" alt="">
+                            </div>
+                            <div class="location_card_title">Patagonia</div>
+                            <div class="location_card_button">Discover</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="share_container">
+        <div class="share_wrapper">
+            <div class="share_content"></div>
+        </div>
+    </section>
 </body>
 
 </html>
