Add links and sticky to nav

--- a/second.html
+++ b/second.html
@@ -20,8 +20,8 @@
             <img src="src/img/logo.svg" alt="" class="logo">
             <div class="nav_menu_section">
                 <ul class="nav_links">
-                    <li class="nav_link">Home</li>
-                    <li class="nav_link active_link">Story</li>
+                    <li class="nav_link"><a href="index.html">Home</a></li>
+                    <li class="nav_link active_link"><a href="#">Story</a></li>
                     <li class="nav_link">Gallery</li>
                     <li class="nav_link">Contact us</li>
                 </ul>
