--- a/pages/story.html
+++ b/pages/story.html
@@ -11,26 +11,27 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="../src/styles/common.css">
+    <link rel="stylesheet" href="../src/styles/story.css">
 </head>
 
 <body>
     <nav class="nav_section">
         <div class="nav_elements">
-            <img src="src/img/logo.svg" alt="" class="logo">
+            <a href="index.html"><img src="../src/img/logo.svg" alt="" class="logo"></a>
             <div class="nav_menu_section">
                 <ul class="nav_links">
                     <li class="nav_link"><a href="index.html">Home</a></li>
                     <li class="nav_link active_link"><a href="#">Story</a></li>
-                    <li class="nav_link">Gallery</li>
-                    <li class="nav_link">Contact us</li>
+                    <li class="nav_link"><a href="#">Gallery</a></li>
+                    <li class="nav_link"><a href="#">Contact us</a></li>
                 </ul>
-                <img src="src/img/line.svg" alt="">
+                <img src="../src/img/line.svg" alt="">
                 <button class="nav_menu_button">
-                    <img src="src/img/search.svg" alt="">
+                    <img src="../src/img/search.svg" alt="">
                 </button>
                 <button class="nav_menu_button">
-                    <img src="src/img/profile.svg" alt="">
+                    <img src="../src/img/profile.svg" alt="">
                 </button>
             </div>
         </div>
@@ -46,7 +47,7 @@
                     </div>
                     <div class="article_hero_header_author">
                         <div class="article_hero_header_author_avatar_container">
-                            <img src="src/img/Avatar.png" alt="" class="article_hero_header_author_avatar">
+                            <img src="../src/img/Avatar.png" alt="" class="article_hero_header_author_avatar">
                         </div>
                         <div class="article_hero_header_author_texts">
                             <span class="article_hero_header_author_name">Darrell Steward</span>
@@ -55,9 +56,9 @@
                     </div>
                 </div>
                 <div class="article_hero_video_container">
-                    <img src="src/img/hero_video_play_button.svg" alt="" class="article_hero_video_button">
-                    <img src="src/img/hero_video_title.svg" alt="" class="article_hero_video_title">
-                    <img src="src/img/Article Hero Image.png" alt="" class="article_hero_video_background">
+                    <img src="../src/img/hero_video_play_button.svg" alt="" class="article_hero_video_button">
+                    <img src="../src/img/hero_video_title.svg" alt="" class="article_hero_video_title">
+                    <img src="../src/img/article_hero_image.png" alt="" class="article_hero_video_background">
                 </div>
             </section>
             <section class="paragraph">
@@ -67,16 +68,16 @@
             <section class="callout_container">
                 <div class="callout_img_grid_container">
                     <div class="callout_main_img">
-                        <img src="src/img/Callout Swiss Winter Image.png" alt="">
+                        <img src="../src/img/callout_swiss_winter_image.png" alt="">
                     </div>
                     <div class="callout_second_img_grid">
-                        <img src="src/img/Callout Switzerland Mountains Pop-up.png" alt="">
-                        <img src="src/img/Callout Switzerland sunset image.png" alt="">
+                        <img src="../src/img/callout_switzerland_mountains_popup.png" alt="">
+                        <img src="../src/img/callout_switzerland_sunset_image.png" alt="">
                     </div>
                 </div>
                 <div class="callout_content">
                     <div class="callout_title_container">
-                        <img src="src/img/paragraph_title.svg" alt="" class="callout_title_img">
+                        <img src="../src/img/paragraph_title.svg" alt="" class="callout_title_img">
                         <span class="callout_title">One of the best hikes we’ve done so far...</span>
                     </div>
                     <div class="callout_text">
@@ -93,15 +94,15 @@
                 <span class="hightlights_title">Hightlights</span>
                 <div class="hightlights_grid">
                     <div class="hightlights_card">
-                        <img src="src/img/Highlight Image.png" alt="">
+                        <img src="../src/img/highlight_img.png" alt="">
                         <span class="hightlights_card_description">The barns built in the 13th and 14th century</span>
                     </div>
                     <div class="hightlights_card">
-                        <img src="src/img/Highlight Image-2.png" alt="">
+                        <img src="../src/img/highlight_img_2.png" alt="">
                         <span class="hightlights_card_description">Riding the the amazing Bernina Express</span>
                     </div>
                     <div class="hightlights_card">
-                        <img src="src/img/Highlight Image-3.png" alt="">
+                        <img src="../src/img/highlight_img_3.png" alt="">
                         <span class="hightlights_card_description">The Matterhorn glacier cable car ride</span>
                     </div>
                 </div>
@@ -166,10 +167,10 @@
             </div>
             <div class="list_container">
                 <ul class="footer_links">
-                    <li class="footer_link">Home</li>
-                    <li class="footer_link">Story</li>
-                    <li class="footer_link">Gallery</li>
-                    <li class="footer_link">Contact us</li>
+                    <li class="footer_link"><a href="index.html">Home</a></li>
+                    <li class="footer_link"><a href="#">Story</a></li>
+                    <li class="footer_link"><a href="#">Gallery</a></li>
+                    <li class="footer_link"><a href="#">Contact us</a></li>
                 </ul>
             </div>
         </div>
