--- a/pages/index.html
+++ b/pages/index.html
@@ -11,26 +11,27 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="../src/styles/common.css">
+    <link rel="stylesheet" href="../src/styles/index.css">
 </head>
 
 <body>
     <nav class="nav_section">
         <div class="nav_elements">
-            <img src="src/img/logo.svg" alt="" class="logo">
+            <a href="index.html"><img src="../src/img/logo.svg" alt="" class="logo"></a>
             <div class="nav_menu_section">
                 <ul class="nav_links">
                     <li class="nav_link active_link"><a href="#">Home</a></li>
-                    <li class="nav_link"><a href="second.html">Story</a></li>
-                    <li class="nav_link">Gallery</li>
-                    <li class="nav_link">Contact us</li>
+                    <li class="nav_link"><a href="story.html">Story</a></li>
+                    <li class="nav_link"><a href="#">Gallery</a></li>
+                    <li class="nav_link"><a href="#">Contact us</a></li>
                 </ul>
-                <img src="src/img/line.svg" alt="">
+                <img src="../src/img/line.svg" alt="">
                 <button class="nav_menu_button">
-                    <img src="src/img/search.svg" alt="">
+                    <img src="../src/img/search.svg" alt="">
                 </button>
                 <button class="nav_menu_button">
-                    <img src="src/img/profile.svg" alt="">
+                    <img src="../src/img/profile.svg" alt="">
                 </button>
             </div>
         </div>
@@ -51,7 +52,7 @@
                     <div class="hero_main_button">Share your story</div>
                     <div class="hero_play_button">
                         <div class="hero_play_button_icon">
-                            <img src="src/img/play.svg" alt="">
+                            <img src="../src/img/play.svg" alt="">
                         </div>
                         <span>Watch highlights</span>
                     </div>
@@ -62,7 +63,7 @@
     <section class="featured_destination_container">
         <div class="featured_destination_wrapper">
             <div class="featured_img_container">
-                <img src="src/img/featured.png" alt="">
+                <img src="../src/img/featured.png" alt="">
             </div>
             <div class="featured_content">
                 <div class="featured_texts">
@@ -73,7 +74,7 @@
                 </div>
                 <div class="featured_button">
                     <div class="featured_play_button_icon">
-                        <img src="src/img/play.svg" alt="">
+                        <img src="../src/img/play.svg" alt="">
                     </div>
                     <span>Watch now</span>
                 </div>
@@ -91,28 +92,28 @@
                     <div class="locations_grid">
                         <div class="location_card">
                             <div class="location_card_img_container">
-                                <img src="src/img/Iceland card image.png" alt="">
+                                <img src="../src/img/iceland_card_image.png" alt="">
                             </div>
                             <div class="location_card_title">Iceland</div>
                             <div class="location_card_button">Discover</div>
                         </div>
                         <div class="location_card">
                             <div class="location_card_img_container">
-                                <img src="src/img/Italy card image.png" alt="">
+                                <img src="../src/img/italy_card_image.png" alt="">
                             </div>
                             <div class="location_card_title">Italy</div>
                             <div class="location_card_button">Discover</div>
                         </div>
                         <div class="location_card">
                             <div class="location_card_img_container">
-                                <img src="src/img/Dubai card image.png" alt="">
+                                <img src="../src/img/dubai_card_image.png" alt="">
                             </div>
                             <div class="location_card_title">Dubai</div>
                             <div class="location_card_button">Discover</div>
                         </div>
                         <div class="location_card">
                             <div class="location_card_img_container">
-                                <img src="src/img/Patagonia Card Image.png" alt="">
+                                <img src="../src/img/patagonia_card_image.png" alt="">
                             </div>
                             <div class="location_card_title">Patagonia</div>
                             <div class="location_card_button">Discover</div>
@@ -175,14 +176,14 @@
                 <div class="recent_main_grid">
                     <div class="recent_hero_content">
                         <div class="recent_main_card">
-                            <img src="src/img/Big Story Image.png" alt="">
+                            <img src="../src/img/big_story_image.png" alt="">
                             <div class="recent_main_card_content">
                                 <div class="recent_main_card_texts">
                                     <span class="recent_main_card_title">Zermatt, Switzerland</span>
                                     <span class="recent_main_card_description">Marvel on the beauty of the iconic Matterhorn. Find the best places to stay that has the best views of this peak...</span>
                                 </div>
                                 <div class="recent_play_button_icon">
-                                    <img src="src/img/play.svg" alt="">
+                                    <img src="../src/img/play.svg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -190,7 +191,7 @@
                     <div class="recent_content_grid">
                         <div class="recent_story_card">
                             <div class="recent_story_card_content">
-                                <img src="src/img/Story Image.png" alt="" class="recent_story_card_img">
+                                <img src="../src/img/story_img.png" alt="" class="recent_story_card_img">
                                 <div class="recent_story_card_texts">
                                     <span class="recent_story_card_title">Tuscany, Italy</span>
                                     <span class="recent_story_card_description">The amazing Tuscany is home to famous Renaissance art and architecture and a vast scenic landscape. <a style="color: var(--secondary-text-color)">view full blog...</a></span>
@@ -199,7 +200,7 @@
                         </div>
                         <div class="recent_story_card">
                             <div class="recent_story_card_content">
-                                <img src="src/img/Story Image-2.png" alt="" class="recent_story_card_img">
+                                <img src="../src/img/story_img_2.png" alt="" class="recent_story_card_img">
                                 <div class="recent_story_card_texts">
                                     <span class="recent_story_card_title">Kyoto, Japan</span>
                                     <span class="recent_story_card_description">Kyoto is well known for its temples, gardens, Shinto shrines and wooden houses. It’s time to visit tokyo. <a style="color: var(--secondary-text-color)">view full blog...</a></span>
@@ -208,7 +209,7 @@
                         </div>
                         <div class="recent_story_card">
                             <div class="recent_story_card_content">
-                                <img src="src/img/Story Image-3.png" alt="" class="recent_story_card_img">
+                                <img src="../src/img/story_img_3.png" alt="" class="recent_story_card_img">
                                 <div class="recent_story_card_texts">
                                     <span class="recent_story_card_title">Lofoten Islands, Norway</span>
                                     <span class="recent_story_card_description">Featuring razor-sharp peaks housing the arctic landscape. This astonishing island is perfect for your next postcard. <a style="color: var(--secondary-text-color)">view full blog...</a></span>
@@ -227,10 +228,10 @@
             </div>
             <div class="list_container">
                 <ul class="footer_links">
-                    <li class="footer_link">Home</li>
-                    <li class="footer_link">Story</li>
-                    <li class="footer_link">Gallery</li>
-                    <li class="footer_link">Contact us</li>
+                    <li class="footer_link"><a href="index.html">Home</a></li>
+                    <li class="footer_link"><a href="#">Story</a></li>
+                    <li class="footer_link"><a href="#">Gallery</a></li>
+                    <li class="footer_link"><a href="#">Contact us</a></li>
                 </ul>
             </div>
         </div>
